# lox-rust

./: Cargo.toml  README.md
src/: lox.rs
src/lox/: environment.rs  expr.rs  function.rs  interpreter.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs  token.rs  value.rs
src/lox/vm/: chunk.rs  disassembler.rs  error.rs  mod.rs  opcodes.rs  value.rs  vm.rs
test-data/interpreter/: 1_print_arithmetic.lox  2_var_declaration.lox  3_scopes.lox  4_conditionals.lox  5_while.lox  6_function.lox  7_closure.lox
test-data/scanner/0_basic/: expected.txt  input.txt
test-data/scanner/1_line_comments/: expected.txt  input.txt
test-data/scanner/2_string_literals/: expected.txt  input.txt
test-data/scanner/3_number_literals/: expected.txt  input.txt
test-data/scanner/4_keywords/: expected.txt
test-data/scanner/5_function/: expected.txt  input.txt
