[package]
name = "lox-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Try to keep the dependencies to a minimum
# [dependencies]


[[bin]]
name = "lox"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = { version = "1" }


[dev-dependencies]
rstest = { version = "0.18.2" }

# Only used for tests. The actual Lox implementation uses std::Result
anyhow = { version = "*" }
